# Discogs-RPA

./: README.md  main.py  pyproject.toml  setup.py
src/discogs_rpa/: discogs_scraper.py
